test/files/neg/t5318c.check
t5318c.scala:13: error: diverging implicit expansion for type CompilerHang.this.TC[F]

Implicit search stack:
seeking type `CompilerHang.this.TC[F]` with method tc in class CompilerHang
  seeking type `CompilerHang.this.TC[x]` with method tc in class CompilerHang
    seeking type `CompilerHang.this.TC[x]` with method tc in class CompilerHang

  breakage // type checker doesn't terminate, should report inference failure
  ^
one error found
